# ai-tutor

./: .env.example  .gitignore  CONFIGURATION_GUIDE.md  GEMINI.md  Makefile  README.md  TROUBLESHOOTING.md  WARP.md  conftest.py  debug_config.py  miniprogram-devs-guide.md  pyproject.toml  test_api_keys.py  test_backend_connection.py  test_homework_api.py  test_physics_support.py  test_qwen_api.py
docs/: AI_TUTOR_PROJECT_OVERVIEW.md  API_INTEGRATION_REPORT.md
docs/reports/: ERROR_ANALYSIS_SERVICE_REPORT.md  PROGRESS_SERVICE_REPORT.md  STAGE2_COMPLETION_SUMMARY.md  TEST_COMPLETION_SUMMARY.md  TEST_FIX_REPORT.md
frontend/: .env.development  .env.production  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: init_db.py  start-services.sh  stop-services.sh  test-summary.sh  test_full_flow.py  test_question_parsing.py
scripts/demo/: demo_error_analysis_api.py
src/ai_tutor/: main.py
static/: index.html  test_frontend_api.html
static/css/: style.css
static/js/: main.js
tests/: README.md
tests/demos/: test_error_analysis_demo.py  test_progress_verification.py
tests/e2e/: test_full_flow.py  test_question_parsing.py
tests/integration/: test_english_grading_flow.py  test_error_analysis_api.py  test_llm_services.py  test_physics_support.py  test_progress_api.py  test_qwen_api.py
tests/manual/: test_api_comprehensive.py  test_api_manual.py
tests/unit/: test_algorithm_only.py  test_english_knowledge.py  test_error_handling.py  test_knowledge_service.py  test_physics_schemas.py  (+1 more)
(+63 files in other folders)
